--- a/data/glade/drw-preferences.glade
+++ b/data/glade/drw-preferences.glade
@@ -470,7 +470,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkCheckButton" id="unlock_checkbutton">
+		    <widget class="GtkCheckButton" id="postpone_checkbutton">
 		      <property name="visible">True</property>
 		      <property name="tooltip" translatable="yes">Check if breaks are allowed to be postponed</property>
 		      <property name="can_focus">True</property>
@@ -548,7 +548,7 @@
 		      </child>
 
 		      <child>
-			<widget class="GtkLabel" id="unlock_pad_label">
+			<widget class="GtkLabel" id="postpone_pad_label">
 			  <property name="label" translatable="yes">    </property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
