Revert "Fix toplevel widget name"
This reverts commit 387727498d1714305e2d2901c89646f7ef7c9594.

--- a/src/drwright-panel.glade
+++ b/src/drwright-panel.glade
@@ -4,7 +4,7 @@
 <glade-interface>
 
 <widget class="GtkWindow" id="typing-break-preferences-dialog">
-  <property name="title">toplevel</property>
+  <property name="title">window1</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
